--- a/templates/CreateEvent.html
+++ b/templates/CreateEvent.html
@@ -20,9 +20,8 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-white" href="{% url 'home' %}"
-          >Reading & Writing Books</a
-        >
+        <a class="navbar-brand text-white" href="{% url 'home' %}"><img src="{%static 'image/logo.png'%}" width="80" > Reading & Writing Books</a>
+
         <button
           class="navbar-toggler"
           type="button"
