--- a/templates/EditWriterProfilePage.html
+++ b/templates/EditWriterProfilePage.html
@@ -14,7 +14,7 @@
 <body>  
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
-        <a class="navbar-brand text-white" href="{% url 'home' %}">Reading & Writing Books</a>
+        <a class="navbar-brand text-white" href="{% url 'home' %}"><img src="{%static 'image/logo.png'%}" width="80" > Reading & Writing Books</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +38,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'sign_in' %}">Sign out</a>
+                    <a class="nav-link text-white" href="{% url 'sign_out' %}">Sign out</a>
                 </li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
 </header>
 <section>
     <div>
-        <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-jacket-jeansie_1142-57736.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid" alt="user image">
+        <img src="https://img.freepik.com/premium-photo/animated-girl-cartoon-character-generated-ai_652383-2311.jpg?ga=GA1.1.209331547.1723160267&semt=ais_hybrid" alt="user image">
         <a href="">Upload Photo</a>
     </div>
     <div class="container">
