--- a/templates/WriterHomePage.html
+++ b/templates/WriterHomePage.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
-        <a class="navbar-brand text-white" href="{% url 'home' %}">Reading & Writing Books</a>
+        <a class="navbar-brand text-white" href="{% url 'home' %}"><img src="{%static 'image/logo.png'%}" width="80" > Reading & Writing Books</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -52,7 +52,7 @@
 </header>
 <h1 class="text-center text-white bg-dark">HELLO <span class="text-info">{{user.username}}</span> ! SO HAPPY TO SEE YOU AGAIN!</h1>
 <div class="slide-container">
-    <h2 class="center-h2">Website Books Slider</h2>
+    <h2 class="center-h2 p-5">Website Books Slider</h2>
     <div class="swiper slider-wrapper">
         <div class="swiper-wrapper">
             <div class="swiper-slide bg-dark">
@@ -108,7 +108,7 @@
                     <h3>Book Clubs</h3>
                     {%for book_club in book_club%}
                     <ul class="book">
-                        <li><a href="#">{{book_club.club_name}}</a></li>
+                        <li><a href="{%url 'view_book_club' book_club.id %}">{{book_club.club_name}}</a></li>
                         {% comment %} <li><a href="#">Book Club 2</a></li>
                         <li><a href="#">Book Club 3</a></li> {% endcomment %}
                     </ul>
@@ -119,7 +119,7 @@
                     <h3>Book Events</h3>
                     {% for event in event%}
                     <ul class="event">
-                        <li><a href="#">{{event.event_name}}</a></li>
+                        <li><a href="{%url 'view_event' event.id%}">{{event.event_name}}</a></li>
                         {% comment %} <li><a href="#">Event 2</a></li>
                         <li><a href="#">Event 3</a></li> {% endcomment %}
                     </ul>
